--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -51,6 +51,8 @@
 .table-sortable > .table-header
 {
   cursor : pointer;
+  z-index: 0;
+  // Allows button dropdowns to appear over the table
 }
 
 /**
